Small fix on firefox number input boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,3 +138,13 @@ tr:last-child{
 .clearfix:after {
   clear: both;
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
